<resources>
    <string name="Chinese_simple">简体中文</string>
    <string name="Chinese_traditional">繁体中文</string>
    <string name="English">English</string>
    <string name="French">Français</string>
    <string name="German">Deutsch</string>
    <string name="H_323">H.323</string>
    <string name="Japanese">日本語</string>
    <string name="Korean">한국어</string>
    <string name="Portuguese">Português</string>
    <string name="Russian">Pу́сский</string>
    <string name="SIP">SIP</string>
    <string name="Spanish">Español</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="accept">Accept</string>
    <string name="accessibility_audio_now_muted">audio now muted</string>
    <string name="accessibility_audio_now_unmuted">audio now unmuted</string>
    <string name="accessibility_direct_number">Direct number %1$s</string>
    <string name="accessibility_ext">Extension %1$s</string>
    <string name="accessibility_hand_now_lowered">hand now lowered</string>
    <string name="accessibility_hand_now_raised">hand now raised</string>
    <string name="accessibility_long_range">Long range</string>
    <string name="accessibility_lower_my_hand">lower my hand</string>
    <string name="accessibility_medium_range">Medium range</string>
    <string name="accessibility_microphone_now_muted">microphone now muted</string>
    <string name="accessibility_microphone_now_unmuted">microphone now unmuted</string>
    <string name="accessibility_mute_my_audio">mute my audio</string>
    <string name="accessibility_mute_my_microphone">mute my microphone</string>
    <string name="accessibility_raise_my_hand">raise my hand</string>
    <string name="accessibility_short_range">Short range</string>
    <string name="accessibility_start_my_video">start my video</string>
    <string name="accessibility_stop_my_video">stop my video</string>
    <string name="accessibility_unmute_my_audio">unmute my audio</string>
    <string name="accessibility_unmute_my_microphone">unmute my microphone</string>
    <string name="accessibility_video_now_started">video now started</string>
    <string name="accessibility_video_now_stopped">video now stopped</string>
    <string name="accessibility_your_ext">Your extension %1$s</string>
    <string name="add">Add</string>
    <string name="add_calendar_failed">Unable to add calendar service.</string>
    <string name="add_calendar_subtitle">Configure a calendar to start or join meetings with one click</string>
    <string name="add_calendar_title">Add a Calendar</string>
    <string name="add_call">Add call</string>
    <string name="add_new_room">+ Add New Room</string>
    <string name="add_participants">Add Participants</string>
    <string name="admit">Admit</string>
    <string name="admit_all">Admit all</string>
    <string name="advanced">advanced</string>
    <string name="advanced_noise_suppression">Advanced Noise Suppression</string>
    <string name="aggressive">Aggressive</string>
    <string name="airplay_for_mac_hint">You can also use Airplay to share your Mac screen</string>
    <string name="alert_add_calendar">This room needs to be connected to a calendar. Contact your Zoom Rooms admin.</string>
    <string name="alert_attendees_unmute_themselves_alert_allow">Allow</string>
    <string name="all_buildings">All Buildings</string>
    <string name="all_campuses">All Campuses</string>
    <string name="all_cities">All Cities</string>
    <string name="all_countries">All Countries</string>
    <string name="all_day">All day</string>
    <string name="all_floors">All Floors</string>
    <string name="all_network_devices_are_disconnected_msg">Please check the device connection and try again later.</string>
    <string name="all_network_devices_are_disconnected_title">All network microphones are disconnected</string>
    <string name="all_rooms">All Rooms</string>
    <string name="all_states">All States</string>
    <string name="allow_attendees_unmute_themselves">Allow Participants to Unmute Themselves</string>
    <string name="allow_attendees_unmute_themselves_alert_not_allow">"Don't Allow"</string>
    <string name="allow_attendees_unmute_themselves_alert_title">Do you want to allow participants to unmute themselves?</string>
    <string name="allow_recording">Allow Recording</string>
    <string name="alternative_device">System selected</string>
    <string name="answer">Answer</string>
    <string name="app_name">Zoom Rooms</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="approve">Approve</string>
    <string name="area_code">Area Code</string>
    <string name="ask_for_passcode_for_changing_camera_preset">Enter the passcode to rename or reposition the camera presets</string>
    <string name="ask_to_start_audio_cancel">Stay Muted</string>
    <string name="ask_to_start_audio_ok">Unmute Myself</string>
    <string name="ask_to_start_audio_title">The host would like you to unmute your microphone.</string>
    <string name="audio_checkup_failed">Requires Attention</string>
    <string name="audio_checkup_result_bad">Bad</string>
    <string name="audio_checkup_result_bad_detail">Echo is always obvious and not conducive to meetings</string>
    <string name="audio_checkup_result_excellent">Excellent</string>
    <string name="audio_checkup_result_excellent_detail">No echo detected</string>
    <string name="audio_checkup_result_fair">Fair</string>
    <string name="audio_checkup_result_fair_detail">Echo is sometimes obvious and annoying</string>
    <string name="audio_checkup_result_good">Good</string>
    <string name="audio_checkup_result_good_detail">Echo is sometimes perceptible, but not annoying</string>
    <string name="audio_checkup_result_poor">Poor</string>
    <string name="audio_checkup_result_poor_detail">Echo is often obvious and very annoying</string>
    <string name="audio_checkup_result_unable_to_determine_detail">Reduce background noise for effective testing</string>
    <string name="audio_checkup_tips_detail"><b>Tips:</b> Lower speaker volume, increase distance between speaker and mic, or improve room acoustics</string>
    <string name="blind_transfer">Blind Transfer</string>
    <string name="cancel">Cancel</string>
    <string name="claim_host">Claim Host</string>
    <string name="connection_failure_room_name">Room name: %s</string>
    <string name="connection_failure_suggestions">"•  Make sure Zoom Rooms is signed in
•  Set this device and Zoom Rooms to the same network"</string>
    <string name="connection_failure_title">Cannot connect to Zoom Rooms</string>
    <string name="connection_failure_zp_info">Zoom Rooms IP address: %s</string>
    <string name="connection_failure_zpc_info">Local IP address: %s</string>
    <string name="echo_level">Echo Level</string>
    <string name="hide_self_view">Hide Self View</string>
    <string name="more">More…</string>
    <string name="move_down">Move down</string>
    <string name="move_left">Move left</string>
    <string name="move_right">Move right</string>
    <string name="move_up">Move up</string>
    <string name="mute_all">Mute All</string>
    <string name="participants_number">Participants (%1$d)</string>
    <string name="please_contact_it">Please contact IT for assistance.</string>
    <string name="policy_description_activation_code">Used to auto login.</string>
    <string name="policy_description_activation_mode">Use the device as a controller or a scheduling display.</string>
    <string name="policy_description_block_unknown_ssl_cert">"1) If this key is not set, ZRC will check the SSL certificate. If the certificate is unknown, ZRC will show a warning dialog and allow user to trust or not trust.
 2) If the value is set to YES, ZRC will check the SSL certificate. All unknown certificate are blocked.
3) If the value is set to NO, ZRC will not check the SSL certificate."</string>
    <string name="policy_title_activation_code">Activation Code</string>
    <string name="policy_title_activation_mode">Device Mode</string>
    <string name="policy_title_block_unknown_ssl_cert">Server Certificate Verification Policy</string>
    <string name="restart">Restart</string>
    <string name="retry">Retry</string>
    <string name="show_details">Show Details</string>
    <string name="show_none_video_participant">Show Non-video Participants</string>
    <string name="sign_out">Sign Out</string>
    <string name="speak_to_the_new_agent_before_transferring">Speak to the new agent before transferring</string>
    <string name="transfer_directly_to_the_new_agent_s_voicemail">"Transfer directly to the new agent's voicemail"</string>
    <string name="transfer_to_voicemail">Transfer to Voicemail</string>
    <string name="transfer_without_speaking_to_the_new_agent">Transfer without speaking to the new agent</string>
    <string name="unmute_all">Unmute All</string>
    <string name="warm_transfer">Warm Transfer</string>
    <string name="zoom_in">Zoom in</string>
    <string name="zoom_out">Zoom out</string>
    <string name="zpc_version">"Version:   %s"</string>
</resources>