<?xml version="1.0" encoding="utf-8"?>
<restrictions
  xmlns:android="http://schemas.android.com/apk/res/android">
    <restriction android:description="@string/policy_description_block_unknown_ssl_cert" android:entries="@array/policy_block_unknown_ssl_cert_entries" android:title="@string/policy_title_block_unknown_ssl_cert" android:key="policy_block_unknown_ssl_cert" android:defaultValue="Default" android:entryValues="@array/policy_block_unknown_ssl_cert_entry_values" />
    <restriction android:description="@string/policy_description_activation_code" android:title="@string/policy_title_activation_code" android:key="ActivationCode" />
    <restriction android:description="@string/policy_description_activation_mode" android:entries="@array/policy_activation_mode_entries" android:title="@string/policy_title_activation_mode" android:key="WorkMode" android:defaultValue="controller" android:entryValues="@array/policy_activation_mode_values" />
    <restriction android:title="Auto Sign In Sequence" android:key="AutoSignInSequence" />
</restrictions>