<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="#ff0e293f" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/echo_level" android:lineSpacingMultiplier="1.2" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textStyle="bold" android:textColor="#ff0e293f" android:id="@id/excellent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/audio_checkup_result_excellent" android:lineSpacingMultiplier="1.2" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/title" />
    <TextView android:textColor="#ff0e293f" android:gravity="start" android:id="@id/excellent_description" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:text="@string/audio_checkup_result_excellent_detail" android:lineSpacingMultiplier="1.2" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/excellent" app:layout_constraintTop_toTopOf="@id/excellent" />
    <TextView android:textStyle="bold" android:textColor="#ff0e293f" android:id="@id/good" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/audio_checkup_result_good" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/excellent_description" />
    <TextView android:textColor="#ff0e293f" android:gravity="start" android:id="@id/good_description" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/audio_checkup_result_good_detail" android:lineSpacingMultiplier="1.2" app:layout_constraintEnd_toEndOf="@id/excellent_description" app:layout_constraintStart_toStartOf="@id/excellent_description" app:layout_constraintTop_toTopOf="@id/good" />
    <TextView android:textStyle="bold" android:textColor="#ff0e293f" android:id="@id/fair" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/audio_checkup_result_fair" android:lineSpacingMultiplier="1.2" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/good_description" />
    <TextView android:textColor="#ff0e293f" android:gravity="start" android:id="@id/fair_description" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/audio_checkup_result_fair_detail" android:lineSpacingMultiplier="1.2" app:layout_constraintEnd_toEndOf="@id/excellent_description" app:layout_constraintStart_toStartOf="@id/excellent_description" app:layout_constraintTop_toTopOf="@id/fair" />
    <TextView android:textStyle="bold" android:textColor="#ff0e293f" android:id="@id/poor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/audio_checkup_result_poor" android:lineSpacingMultiplier="1.2" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/fair_description" />
    <TextView android:textColor="#ff0e293f" android:gravity="start" android:id="@id/poor_description" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/audio_checkup_result_poor_detail" android:lineSpacingMultiplier="1.2" app:layout_constraintEnd_toEndOf="@id/excellent_description" app:layout_constraintStart_toStartOf="@id/excellent_description" app:layout_constraintTop_toTopOf="@id/poor" />
    <TextView android:textStyle="bold" android:textColor="#ff0e293f" android:id="@id/bad" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/audio_checkup_result_bad" android:lineSpacingMultiplier="1.2" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/poor_description" />
    <TextView android:textColor="#ff0e293f" android:gravity="start" android:id="@id/bad_description" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/audio_checkup_result_bad_detail" android:lineSpacingMultiplier="1.2" app:layout_constraintEnd_toEndOf="@id/excellent_description" app:layout_constraintStart_toStartOf="@id/excellent_description" app:layout_constraintTop_toTopOf="@id/bad" />
    <TextView android:textColor="#ff0e293f" android:id="@id/tips" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/audio_checkup_tips_detail" android:lineSpacingMultiplier="1.2" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/bad_description" />
</androidx.constraintlayout.widget.ConstraintLayout>