<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="@color/text_color_audio_test_failed" android:layout_gravity="center_horizontal" android:id="@id/result" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/audio_checkup_failed" style="@style/ZRCTextView.Large" />
    <TextView android:textColor="@color/zrc_white" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/result_description" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/audio_checkup_result_unable_to_determine_detail" style="@style/ZRCTextView.Mid" />
    <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="200.0dip">
        <Button android:textColor="@color/zrc_white" android:layout_gravity="center_horizontal" android:id="@id/restart_system" android:background="@drawable/audio_check_btn_restart_bg" android:paddingLeft="40.0dip" android:paddingRight="40.0dip" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_marginTop="40.0dip" android:text="@string/restart" />
        <Button android:textColor="#ff535367" android:layout_gravity="center_horizontal" android:id="@id/cancel" android:background="@drawable/audio_check_btn_bg" android:paddingLeft="40.0dip" android:paddingRight="40.0dip" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_marginTop="14.0dip" android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>