<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageButton android:id="@id/cpZoomOut" android:background="@android:color/transparent" android:layout_width="@dimen/zrc_meeting_camera_control_button_width" android:layout_height="@dimen/zrc_meeting_camera_control_button_width" android:src="@drawable/camera_control_zoom_out_bg2" android:scaleType="centerCrop" android:layout_centerInParent="true" android:contentDescription="@string/zoom_out" android:translationX="@dimen/zrc_camera_contral_translationX4" android:translationY="@dimen/zrc_meeting_camera_control_margin2" />
    <ImageButton android:id="@id/cpZoomIn" android:background="@android:color/transparent" android:layout_width="@dimen/zrc_meeting_camera_control_button_width" android:layout_height="@dimen/zrc_meeting_camera_control_button_width" android:src="@drawable/camera_control_zoom_in_bg2" android:scaleType="centerCrop" android:layout_centerInParent="true" android:contentDescription="@string/zoom_in" android:translationX="@dimen/zrc_camera_contral_translationX4" android:translationY="@dimen/zrc_meeting_camera_control_negative_margin2" />
    <ImageButton android:layout_gravity="center_horizontal" android:id="@id/cpShiftUp" android:background="@android:color/transparent" android:layout_width="@dimen/zrc_meeting_camera_control_button_width" android:layout_height="@dimen/zrc_meeting_camera_control_button_width" android:src="@drawable/camera_control_left_arrow2" android:scaleType="centerCrop" android:layout_centerInParent="true" android:contentDescription="@string/move_up" android:translationX="@dimen/zrc_camera_contral_translationX1" android:translationY="@dimen/zrc_meeting_camera_control_negative_margin2" android:rotation="90.0" />
    <ImageButton android:id="@id/cpShiftLeft" android:background="@android:color/transparent" android:layout_width="@dimen/zrc_meeting_camera_control_button_width" android:layout_height="@dimen/zrc_meeting_camera_control_button_width" android:src="@drawable/camera_control_left_arrow2" android:scaleType="centerCrop" android:layout_centerInParent="true" android:contentDescription="@string/move_left" android:translationX="@dimen/zrc_camera_contral_translationX2" />
    <ImageButton android:id="@id/cpShiftRight" android:background="@android:color/transparent" android:layout_width="@dimen/zrc_meeting_camera_control_button_width" android:layout_height="@dimen/zrc_meeting_camera_control_button_width" android:src="@drawable/camera_control_left_arrow2" android:scaleType="centerCrop" android:layout_centerInParent="true" android:contentDescription="@string/move_right" android:translationX="@dimen/zrc_camera_contral_translationX3" android:rotation="180.0" />
    <ImageButton android:id="@id/cpShiftDown" android:background="@android:color/transparent" android:layout_width="@dimen/zrc_meeting_camera_control_button_width" android:layout_height="@dimen/zrc_meeting_camera_control_button_width" android:src="@drawable/camera_control_left_arrow2" android:scaleType="centerCrop" android:layout_centerInParent="true" android:contentDescription="@string/move_down" android:translationX="@dimen/zrc_camera_contral_translationX1" android:translationY="@dimen/zrc_meeting_camera_control_margin2" android:rotation="270.0" />
</RelativeLayout>